<resources>
    <string name="app_name">日记本</string>
    <!--用户登陆&注册-->
    <string name="login_title">用户登陆</string>
    <string name="register_title">用户注册</string>
    <string name="username_tips">请输入用户名</string>
    <string name="password_tips">请输入密码</string>
    <string name="email_tips">请输入邮箱地址</string>
    <string name="login_btn_name">登陆</string>
    <string name="register_btn_name">注册</string>
    <string name="submit_btn_name">提交</string>
    <string name="reset_btn_name">重置</string>
    <string name="login_tips">欢迎使用！</string>
    <string name="register_tips">邮箱地址用于忘记密码后重置密码</string>
    <!--底部导航菜单-->
    <string name="menu_diary">我的日记</string>
    <string name="menu_write">写日记</string>
    <string name="menu_setting">设置</string>
    <!--顶部操作菜单-->
    <string name="menu_action_search">搜索</string>
    <string name="menu_action_edit">编辑</string>
    <string name="menu_action_save">保存</string>
    <string name="menu_action_help">帮助</string>
    <!--我的日记-->
    <string name="title_diary">我的日记</string>
    <string name="load_list_text">正在加载中...</string>
    <!--写日记-->
    <string name="title_write">写日记</string>
    <string name="title_view">查看日记</string>
    <string name="diary_title">2017年6月27日 星期二</string>
    <string name="diary_weather">天气...</string>
    <string name="diary_subtitle">一句话总结今天的生活...</string>
    <string name="diary_content">开始写日记...</string>
    <string name="diary_emote_tips">今天的心情...</string>
    <!--设置-->
    <string name="title_setting">设置</string>
    <string name="account_login_tips">点击登录</string>
    <string name="account_login_help">支持云同步</string>
    <string name="title_setting_area">地区设置</string>
    <string name="title_setting_area_tips"></string>
    <string name="title_setting_auto_area">自动获取当地天气</string>
    <string name="title_setting_show">显示设置</string>
    <string name="title_setting_sync">自动云端同步</string>
    <string name="title_setting_sync_tips">登录后支持自动云端同步</string>
    <string name="title_setting_logout">退出登录</string>
    <string name="more_setting">更多</string>

    <!--帮助-->
    <string name="help_title">欢迎使用</string>
    <string name="help_content">本软件由谢春平开发，欢迎反馈意见和建议！402085437@qq.com</string>
    <string name="help_close">关闭</string>

    <!--常用工具-->
    <string name="util_picker_area_title">请选择地区</string>
    <string name="util_picker_area_confirm">确 定</string>

</resources>
